@@ -1667,7 +1667,7 @@ div.warn {
 }
 
 
-/*#head a[href="index.php?sec=usuarios&sec2=operation/users/user_edit"] {
+/*#head a[href="index.php?sec=workspace&sec2=operation/users/user_edit"] {
 	display: block;
 	position: absolute;
 	top: 10px;
