@@ -350,7 +350,11 @@ function menu_get_sec($with_categories = false) {
 	foreach($menu as $k => $v) {
 		if($with_categories) {
 			if(!$in_godmode && $k[0] == 'g') {
-				$in_godmode = true;
+				// Hack to dont confuse with gis activated because godmode 
+				// sec starts with g (like gismaps)
+				if($k != 'gismaps') {
+					$in_godmode = true;
+				}
 			}
 			
 			if($in_godmode) {
@@ -389,7 +393,6 @@ function menu_get_sec_pages($sec,$menu_hash = false) {
 	else {
 		$menu = json_decode(base64_decode($menu_hash),true);
 	}
-	
 	// Get the sec2 of the main section
 	$sec2_array[$menu[$sec]['sec2']] = $menu[$sec]['text'];
 
